syntax = "proto3";

package user_service;

option go_package = "./;user_service";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser(User) returns (CreateUserResponse) {}
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {}
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  repeated string orderedBooks = 5;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  string name = 1;
  string email = 2;
  string password = 3;
  repeated string orderedBooks = 4;
}

message CreateUserResponse {
  User user = 1;
}

message GetAllUsersRequest {

}

message GetAllUsersResponse {
  repeated User allUsers = 1;
}


